<resources>
    <string name="app_name">MadWorld</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="task_1">Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="task_3">Task 3</string>
    <string name="task_4">Task 4</string>
    <string name="task_5">Task 5</string>
    <string name="shameless_yt_channel_plug">Shameless YT Channel Plug</string>
    <string name="search_on_google">Search on Google</string>
    <string name="task_failed_successfully_1">Task Failed Successfully #1</string>
    <string name="google_maps">Google Maps</string>
    <string name="task_failed_successfully_2">Task Failed Successfully #2</string>
</resources>